# Wick

./: .gitignore  CLAUDE.md  README.md
app/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
app/src/: App.tsx  main.tsx  polyfill.ts  sounds.ts  util.ts
app/src/chain/: config.ts  wallet.ts  wick.ts
app/src/chain/idl/: wick.json
app/src/components/: HouseDesk.tsx  LatencyDuel.tsx  LatencyTape.tsx  Leaderboard.tsx  MarketRail.tsx  Onboarding.tsx  PnlChart.tsx  PriceStage.tsx  RollupNote.tsx  Toasts.tsx  TopBar.tsx  TradeControls.tsx  TrustPanel.tsx  Verdict.tsx  WickStrip.tsx
app/src/state/: store.ts
app/src/styles/: global.css
keepers/: common.ts  daemon.ts  hedger.ts  package-lock.json  package.json  setup.ts  shot-desk.ts  shot-duel.ts  shot-touch.ts  shot-verify.ts  shot.ts  test-arm.ts  test-crank.ts  test-crank2.ts  test-sweep.ts  test-touch.ts  test-void.ts
program/: Anchor.toml  package-lock.json  package.json  tsconfig.json
program/programs/wick/: Cargo.toml
program/programs/wick/src/: errors.rs  events.rs  lib.rs  oracle.rs  state.rs
program/programs/wick/src/instructions/: admin.rs  delegate.rs  er.rs  mod.rs  user.rs
program/tests/: wick.test.ts
