[package]
name = "wick"
version = "0.1.0"
description = "Wick — ultra-short-dated options on MagicBlock Ephemeral Rollups, hedged on Flash Trade"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wick"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = "1.0.2"
ephemeral-rollups-sdk = { version = "0.14.3", features = ["anchor"] }
magicblock-magic-program-api = "0.12.1"
bincode = "1.3"
